# multi_sig_poc

multi_sig/: Cargo.toml
multi_sig/src/: lib.rs  test.rs
